[package]
name = "juice_mnist"
version = "0.1.0"
authors = ["Paul Kassianik <pkassianik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juice = { version = "0.2.3", default-features = false }
coaster = "0.1.0"
coaster-blas = "0.2.0"
docopt = "1.1.0"
serde = { version = "1", features = ["derive"] }
url = "2.1.1"
curl = "0.4.25"
flate2 = "1.0"
byteorder = "1.3.4"
image = "0.23.0"

[profile.release]
opt-level=3
debug=1
lto="thin"
incremental=false
codegen-units=1

[features]
default = ["juice/native"]
